# Cooperative

./: .gitignore  README.md
src/: CMakeLists.txt
src/cooperative_link/: CMakeLists.txt  package.xml  setup.py
src/cooperative_link/config/: default.yaml
src/cooperative_link/docs/: 使用说明.md
src/cooperative_link/launch/: cooperative_link.launch  play_bag_with_nav.launch
src/cooperative_link/launch/includes/: sim_time_and_rviz.launch
src/cooperative_link/matlab/: Dynamic_Object_Recognition_and_Tracking.m  Identification_en.m
src/cooperative_link/msg/: CooperativeTargets.msg  CoordFrameEstimate.msg  DynamicTarget.msg  DynamicTargetArray.msg  UwbRange.msg  UwbRangeArray.msg
src/cooperative_link/plot/: __init__.py  plot_coop_targets.py
src/cooperative_link/rviz/: cooperative_link.rviz  cooperative_link_multi.rviz
src/cooperative_link/scripts/: cooperative_link_node  eval_cooperative_link  nav_file_to_ros_publisher  plot_coop_targets  replay_dynamic_assoc
src/cooperative_link/src/cooperative_link/: __init__.py  associate.py  config.py  dual_nav_relative.py  dynamic_detect.py  dynamic_markers.py  dynamic_targets.py  ego_motion.py  eval_cooperative_link.py  export_pointcloud_bin.py  filter_config.py  geodesy_local_enu.py  lidar_filter.py  nav_file_publisher.py  nav_pose.py  nav_ros_buffer.py  partner_config.py  partner_match.py  pipeline.py  post_process.py  prior.py  replay_dynamic_assoc.py  ros_config.py  ros_node.py  targets_registry.py  test_cooperative_targets.py  test_dynamic_markers.py  test_filter_pipeline.py  test_nav_ros_buffer.py  test_partner_match.py  test_pipeline_multi.py  test_prior.py  test_ros_config_topics.py  test_topic_names.py  test_track_filter.py  test_track_predict.py  test_trajectory_align.py  test_uwb_range.py  test_uwb_range_multi.py  time_sync.py  (+5 more)
